--- a/site/site.css
+++ b/site/site.css
@@ -6,7 +6,6 @@ body {
     overflow: auto;
     display: flex;
     flex-direction: column;
-    gap: 20px;
     background-color: #f7f6f6;
 }
 
@@ -18,7 +17,7 @@ body {
 
 @media (max-width: 1450px) {
     .img-banner {
-      width: 1450px;
+      width: 100%;
     }
 }
 
@@ -74,20 +73,22 @@ body {
     display: flex;
     align-items: center;
     height: 100px;
-    padding: 0 20px;
-    justify-content: center;
-    gap: 30px;
+    padding: 0 4%;
+    justify-content: space-between;
 }
+
+
 
 .numberCall{
     font-size: 24px;
     font-family: Cherry Bomb, sans-serif; color: #3E4095;
+    cursor: pointer;
 }
 /* Ảnh ABC */
 .search-img {
-    width: 73px;
+    width: 4vw;
     height: auto;
-    margin-right: 142px;
+    cursor: pointer;
 }
 
 
@@ -97,7 +98,7 @@ body {
 }
 
 .input-search {
-    width: 750px;
+    width: 50%;
     height: auto;
     position: relative;
 }
@@ -154,7 +155,8 @@ body {
 }
 
 .favarites img{
-   width: 42px;
+   width: 3.5vw;
+   cursor: pointer;
 }
 
 .info-user {
@@ -165,6 +167,11 @@ body {
     height: auto;
     border-left: 1px solid #74D778;
     padding: 0 24px;
+    cursor: pointer;
+}
+
+.info-user span svg{
+    width: 3vw;
 }
 
 .info-user span svg:hover {
@@ -186,38 +193,38 @@ body {
 
 .shoppingCart {
     position: absolute;
-    width: 470px;
+    width: 570px;
     height: auto;
-    background-color: #fff;
+    background-color: #e0f7fa;
     top: calc(100% + 5px);
     right: -21px;
     z-index: 999999;
     border-radius: 5px;
-    border: 1px solid #ccc;
+    border: 4px dashed #80deea;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #fff;
     overflow: auto;
+    font-family: 'Comic Sans MS', sans-serif;
 }
 
 .shoppingCartSideBar {
     position: absolute;
-    width: 470px;
+    width: 570px;
     height: auto;
-    background-color: #fff;
-    top: -188px;
+    background-color: #e0f7fa;
+    bottom: -134px;
     right: 0;
     z-index: 999999;
     border-radius: 5px;
-    border: 1px solid #ccc;
+    border: 4px dashed #80deea;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #fff;
     overflow: auto;
+    font-family: 'Comic Sans MS', sans-serif;
 }
 .container-shopingCart{
     position: absolute;
@@ -229,51 +236,55 @@ body {
 .shoppingCart p{
     text-align: center;
     font-size: 20px;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: #344241;
+    font-family: 'Comic Sans MS', sans-serif;
+    color: #415b5a;
     margin: 10px 0;
 }
 .shoppingCartSideBar p{
     text-align: center;
     font-size: 20px;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: #344241;
+    font-family: 'Comic Sans MS', sans-serif;
+    color: #415b5a;
     margin: 10px 0;
 }
 
 .countQuantity{
     position: absolute;
-    background-color: #D0E63A;
-    right: 15px;
+    background-color: #dcfc0c;
+    right: 20%;
     top: 0;
-    width: 20px;
+    width: 24px;
     height: auto;
     border-radius: 15px;
     text-align: center;
     color: red;
     font-family: Encode Sans Semi Condensed;
     font-weight: 600;
+    font-size: 13px;
+    padding: 3px;
 }
 
 .countQuantitySideBar{
     position: absolute;
-    background-color: #D0E63A;
+    background-color: #dcfc0c;
     right: 0;
-    top: -8px;
-    width: 20px;
+    top: 0;
+    width: 24px;
     height: auto;
     border-radius: 15px;
     text-align: center;
     color: red;
     font-family: Encode Sans Semi Condensed;
     font-weight: 600;
+    font-size: 13px;
+    padding: 3px;
 }
 
 .shoppingCart button{
     position: sticky;
     bottom: 0%;
     width: 100%;
-    height: 6vh;
+    height: 40px;
     border: none;
     color: red;
 }
@@ -281,9 +292,10 @@ body {
     position: sticky;
     bottom: 0%;
     width: 100%;
-    height: 6vh;
+    height: 40px;
     border: none;
     color: red;
+    font-family: 'Comic Sans MS', sans-serif;
 }
 .list-item-added{
     overflow-x: scroll;
@@ -310,7 +322,7 @@ tr span{
 
 
 .tableBody tr{
-    border-bottom: 1px solid #f5eded;
+    border-bottom: 2px dashed #f5eded;
 }
 .tableBody tr:hover{
     background-color: #d4e1e4;
@@ -350,6 +362,8 @@ tr span{
     position: static;
     bottom: 0;
     z-index: 4;
+    font-family: 'Comic Sans MS', sans-serif;
+    
 }
 .hide{
     display: none;
@@ -378,6 +392,7 @@ tr span{
     bottom: 15px;
     right: -5px;
     z-index: 999999;
+    display: none;
 }
 
 .list-item-added li {
@@ -401,6 +416,7 @@ tr span{
     align-items: center;
     background-color: #fff;
     height: 50px;
+    padding: 0 4%;
 }
 
 .navbar-menu{
@@ -420,6 +436,7 @@ tr span{
 .nav-left span {
     font-size: 24px;
     font-family: 'Cherry Bomb', sans-serif;
+    cursor: pointer;
 }
 
 .nav-left span:nth-child(2) {
@@ -463,10 +480,10 @@ tr span{
     z-index: 9999999; /* Nằm trên cùng */
     top: 0; /* Đỉnh trang */
     left: 0; /* Bên trái */
-    background-color: #fff7f7; /* Màu nền đen */
+    background-color: #efe1e1; /* Màu nền đen */
     overflow-x: hidden; /* Ẩn cuộn ngang */
     padding-top: 60px; /* Đệm 60px từ trên cùng */
-    transition: 0.5s; /* Hiệu ứng chuyển tiếp 0.5 giây */
+    transition: 0.3s; /* Hiệu ứng chuyển tiếp 0.5 giây */
   }
   
   .sidenav a {
@@ -477,6 +494,7 @@ tr span{
     display: block; /* Đảm bảo liên kết chiếm toàn bộ chiều rộng */
     transition: 0.3s; /* Hiệu ứng chuyển tiếp cho liên kết */
     font-family: 'Cherry Bomb';
+    white-space: nowrap;
   }
   
   .sidenav a:hover, .offcanvas a:focus {
@@ -587,6 +605,18 @@ tr span{
     font-size: 16px; /* Kích thước chữ cho nút */
     margin: 0 5px; /* Khoảng cách giữa các nút và số lượng */
     cursor: pointer; /* Hiển thị con trỏ tay khi hover */
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    background-color: #80cbc4;
+}
+
+.shoppingCart .btn-delete{
+    padding: 5px 5px;
+    background-color: unset;
+    font-size: 16px;
+    color: #d61b2a;
+    font-family:'Comic Sans MS', sans-serif;
 }
 .quantity{
     padding: 0 !important
@@ -636,3 +666,53 @@ tr span{
     background-color: #0066cc; /* màu xanh Zalo */
 }
 
+.more-button-search {
+    cursor: pointer;
+    padding: 8px;
+    border-radius: 4px;
+  }
+  
+  .language-menu {
+    display: none; /* Ẩn menu ban đầu */
+    position: absolute;
+    top: 60%; /* Đặt ngay dưới nút "more" */
+    right: 0; /* Canh phải với nút "more" */ 
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 1;
+    background-color: rgba(98, 52, 52, 0.5)
+  }
+
+  .language-menu img{
+    width: 40px;
+    height: 40px;
+  }
+  
+  .language-option {
+    padding: 8px 16px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+  }
+  
+  .language-option:hover {
+    background-color: #f0f0f0;
+  }
+  
+  .more-button-search{
+    display: none;
+  }
+
+  /* Đặt kích thước cho slider */
+  .custom-swiper-container {
+    width: 100%;
+    height: 300px;
+  }
+  .custom-swiper-slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
