--- a/site/responsive.css
+++ b/site/responsive.css
@@ -43,6 +43,13 @@
   .main-6-right-slide .infor-product-head>img{
     width: 70%;
   }
+  .popup-box{
+    width: 50vw;
+  }
+
+  .main-9-container-tab p{
+    font-size: 18px;
+  }
 }
 
 @media only screen and (max-width: 1024px) {
@@ -114,9 +121,6 @@
     display: block;
   }
 
-  .contact {
-    display: none;
-  }
 
   .footer-head {
     flex-wrap: wrap;
@@ -150,7 +154,11 @@
   }
 
   .link-nav span {
-    font-size: 20px;
+    font-size: 1.7vw;
+  }
+
+  .numberCall{
+    font-size: 1.7vw;
   }
 
   .navbar {
@@ -249,6 +257,10 @@
   .header-search .more-button-search{
     display: block;
   }
+  .header-search .more-button-search i{
+    color: white;
+    font-size: 20px;
+  }
   .header-search>.info-user{
     display: none;
   }
@@ -262,6 +274,21 @@
   }
   .footer-bottom{
     flex-wrap: wrap;
+    flex-direction: column;
+    gap: 0;
+  }
+  .footer-head{
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .footer-head>img{
+    margin: 0 auto;
+  }
+  .search-box2{
+    width: 70vw;
+  }
+  .search-box2 input{
+    width: 100%;
   }
 }
 
@@ -276,6 +303,10 @@
 
   .img-banner {
     display: none;
+  }
+
+  .confirmation-modal{
+    width: 70vw;
   }
 
   .search-img {
@@ -320,6 +351,7 @@
   .input-search {
     margin-left: 0;
     width: 70%;
+    height: auto;
   }
 
   .more-button-search {
@@ -468,7 +500,7 @@
   }
 
   .shoppingCartSideBar {
-    width: 60vw;
+    width: 80vw;
   }
 
   .main-6-left-bottom-price {
@@ -538,7 +570,7 @@
   }
 
   .padding-62 {
-    padding: 0 10px;
+    padding: 0 15px;
   }
 }
 
@@ -567,7 +599,7 @@
 
 @media only screen and (max-width: 599px) {
   .padding-62 {
-    padding: 0 10px;
+    padding: 0 15px;
   }
 
   .navbar {
@@ -590,10 +622,10 @@
   .search-popup {
     display: block;
     position: fixed;
-    top: 0;
+    top: 50px;
     left: 0;
     width: 100%;
-    background-color: aqua;
+    background-color: #fff;
     color: black;
     padding: 10px;
     opacity: 0;
@@ -604,11 +636,26 @@
 
   }
 
+  .button-payment{
+    margin: 0;
+    white-space: nowrap;
+    font-size: 14px;
+    width: auto !important
+  }
+
   .search-popup.active {
     opacity: 1;
     transform: translateY(0);
     pointer-events: auto;
     /* Kích hoạt tương tác khi hiển thị */
+  }
+
+  .list-item-added{
+    overflow-x: auto;
+  }
+  .shoppingCartSideBar p{
+    font-size: 100%;
+    flex-direction: column;
   }
 
   .search-popup input {
@@ -627,12 +674,29 @@
   .search-bar {
     display: flex;
     align-items: center;
+    position: relative;
+    gap: 10px;
   }
 
   .back-icon {
-    font-size: 20px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 35px;
+    height: 35px;
+    background-color: #4CAF50; /* Màu nền */
+    color: #fff; /* Màu icon */
+    font-size: 17px; /* Kích thước icon */
+    border: none;
+    border-radius: 50%; /* Bo tròn nút */
     cursor: pointer;
-    margin-right: 10px;
+    transition: background-color 0.3s, transform 0.2s;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+
+  .back-icon:hover {
+    background-color: #45A049;
+    transform: scale(1.1); /* Phóng to icon khi hover */
   }
 
 
@@ -641,6 +705,21 @@
     font-size: 20px;
     margin-left: 10px;
     cursor: pointer;
+    position: absolute;
+    right: 0px;
+    width: 90px;
+    height: 41px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    background-color: #71cf30;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .search-input-icon:hover{
+    background-color: #69db17;
+    transform: scale(1.1); /* Phóng to icon khi hover */
   }
 
   .search-history{
@@ -691,6 +770,14 @@
     display: block;
   }
 
+  .nav-search .search-icon svg{
+    fill: darkcyan;
+  }
+
+  .nav-search:hover{
+    scale: 1.2;
+  }
+
   .shopping-navigation svg {
     width: 30px;
     height: 30px;
@@ -737,10 +824,6 @@
     height: 30px;
   }
 
-  .info-user-fixed-right span:active {
-    scale: 1.2;
-  }
-
   .navbar {
     gap: 20px;
     position: fixed;
@@ -748,13 +831,9 @@
     left: 0;
     right: 0;
     z-index: 26;
-    padding: 0 10px;
+    padding: 0 15px;
     justify-content: space-between;
     background-color: aqua;
-  }
-
-  .navbar-menu {
-    margin-right: auto;
   }
 
   .container-logo2 {
@@ -767,6 +846,10 @@
     margin-left: 0.3rem;
   }
 
+  .more-button-search:hover{
+    scale: 1.2;
+  }
+
   main {
     margin-top: 50px !important
   }
@@ -776,7 +859,7 @@
   }
 
   .topnav {
-    width: 25px;
+    width: 60px;
     height: 30px;
   }
 
@@ -791,6 +874,10 @@
 
   .success-message {
     width: 90%;
+  }
+
+  .popup-box{
+    width: 70vw;
   }
 
 }
@@ -1014,6 +1101,15 @@
   .main-6-left>img {
     width: 100%;
   }
+
+  .heart-main3 {
+    right: 50px;
+    top: -23px;
+    font-size: 20px;
+}
+.main-1{
+  margin-top: 20px;
+}
 
   .navbar {
     gap: 20px;
