--- a/site/site.css
+++ b/site/site.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow: auto;
+    overflow-x:hidden;
     display: flex;
     flex-direction: column;
     background-color: #f7f6f6;
@@ -13,18 +13,6 @@ body {
     display: flex;
     width: 100%;
     object-fit: cover;
-}
-
-@media (max-width: 1450px) {
-    .img-banner {
-      width: 100%;
-    }
-}
-
-@media (max-width: 768px) {
-    .img-banner {
-      width: 100%;
-    }
 }
 
 .header-green{
@@ -195,12 +183,12 @@ body {
     position: absolute;
     width: 570px;
     height: auto;
-    background-color: #e0f7fa;
+    background-color: #a6f5ff;
     top: calc(100% + 5px);
     right: -21px;
     z-index: 999999;
     border-radius: 5px;
-    border: 4px dashed #80deea;
+    border: 1px dashed #80deea;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -213,7 +201,7 @@ body {
     position: absolute;
     width: 570px;
     height: auto;
-    background-color: #e0f7fa;
+    background-color: #a6f5ff;
     bottom: -134px;
     right: 0;
     z-index: 999999;
@@ -280,28 +268,39 @@ body {
     padding: 3px;
 }
 
-.shoppingCart button{
+.shoppingCart>button{
     position: sticky;
     bottom: 0%;
     width: 100%;
     height: 40px;
     border: none;
     color: red;
+    background-color: unset;
 }
-.shoppingCartSideBar button{
+
+.btn-delete-sidebar{
+    border: none;
+}
+.shoppingCartSideBar>button{
     position: sticky;
     bottom: 0%;
     width: 100%;
     height: 40px;
     border: none;
-    color: red;
     font-family: 'Comic Sans MS', sans-serif;
+    background-color: unset;
+}
+
+.shoppingCartSideBar .button-payment{
+    height: 100%;
 }
 .list-item-added{
     overflow-x: scroll;
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
+    max-height: 400px;
+    overflow-y: auto;
 }
 .list-item-added:-webkit-scrollbar {
     display: none;
@@ -322,24 +321,25 @@ tr span{
 
 
 .tableBody tr{
-    border-bottom: 2px dashed #f5eded;
+    border-bottom: 1px dashed #d7d7d7 ;
 }
 .tableBody tr:hover{
-    background-color: #d4e1e4;
+    background-color: #7be6ff;
 }
 
 .list-item-added table thead{
     font-size: 0.7vw;
 }
-.tableBody tr td span{
-    display: flex;
-    align-items: center;
-}
 .tableBody tr td {
+    padding: 11px 6px;
+}
+
+.tableBodySideBar tr td {
     padding: 11px 6px;
 }
 .list-item-added table tbody tr img{
     width: 25%;
+    border-radius: 50%;
 }
 
 .list-item-added span{
@@ -419,6 +419,35 @@ tr span{
     padding: 0 4%;
 }
 
+.payment-total{
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+    align-items: center;
+}
+
+.payment-total>span{
+    border-left: none;
+}
+
+.button-payment{
+    width: 30% !important;
+    background-color: #ff4d01;
+    color: white;
+    padding: 12px 20px;
+    font-family: cursive;
+    border: none;
+    border-radius: 8px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-right: 15px;
+}
+
+.button-payment:hover{
+    background-color: #ff6b3c;
+}
+
 .navbar-menu{
     display: none;
 }
@@ -431,6 +460,7 @@ tr span{
 .link-nav{
     display: flex;
     gap: 60px;
+    align-items: center;
 }
 
 .nav-left span {
@@ -534,7 +564,6 @@ tr span{
   }
   
   .topnav a:hover {
-    background-color: #fff; /* Màu nền khi hover */
     color: black; /* Màu chữ khi hover */
   }
   
@@ -600,15 +629,16 @@ tr span{
 }
 
 .quantity-control button {
-    width: 20px; /* Chiều rộng của nút */
-    height: 20px; /* Chiều cao của nút */
-    font-size: 16px; /* Kích thước chữ cho nút */
-    margin: 0 5px; /* Khoảng cách giữa các nút và số lượng */
-    cursor: pointer; /* Hiển thị con trỏ tay khi hover */
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-    background-color: #80cbc4;
+    background-color: #ffcd85;
+  border: none;
+  padding: 5px 10px;
+  font-size: 16px;
+  color: #fff;
+  cursor: pointer;
+  height: 30px;
+  border-radius: 6px;
+  margin: 0 5px;
+  transition: background-color 0.3s;
 }
 
 .shoppingCart .btn-delete{
@@ -617,6 +647,7 @@ tr span{
     font-size: 16px;
     color: #d61b2a;
     font-family:'Comic Sans MS', sans-serif;
+    border: none;
 }
 .quantity{
     padding: 0 !important
@@ -671,11 +702,15 @@ tr span{
     padding: 8px;
     border-radius: 4px;
   }
+
+  .more-button-search:active{
+    background-color: rgba(33, 176, 176,0.8);
+  }
   
   .language-menu {
     display: none; /* Ẩn menu ban đầu */
     position: absolute;
-    top: 60%; /* Đặt ngay dưới nút "more" */
+    top: 75%; /* Đặt ngay dưới nút "more" */
     right: 0; /* Canh phải với nút "more" */ 
     border: 1px solid #ddd;
     border-radius: 4px;
@@ -683,6 +718,7 @@ tr span{
     z-index: 1;
     background-color: rgba(98, 52, 52, 0.5)
   }
+  
 
   .language-menu img{
     width: 40px;
@@ -699,7 +735,7 @@ tr span{
   }
   
   .language-option:hover {
-    background-color: #f0f0f0;
+    background-color: rgb(10, 118, 118);
   }
   
   .more-button-search{
